<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">OpenPods</string>

    <string name="bg_noti_channel" translatable="false">Background Notification</string>
    <string name="bg_noti_title" tools:ignore="MissingTranslation">Running in the background</string>
    <string name="bg_noti_text" tools:ignore="MissingTranslation">Click to open notification settings</string>

    <string name="intro_title">This app lets you check the status of your AirPods on any Android device</string>
    <string name="intro_message">To operate, we need permission to use Bluetooth LE (Location) and permission to run in background</string>
    <string name="intro_allow">Allow</string>
    <string name="intro_step" tools:ignore="MissingTranslation">Step</string>
    <string name="intro_bt_perm" tools:ignore="MissingTranslation">Bluetooth Permissions</string>
    <string name="intro_bat_perm" tools:ignore="MissingTranslation">Battery Optimization</string>
    <string name="intro_loc1_perm" tools:ignore="MissingTranslation">Location Permission</string>
    <string name="intro_loc2_perm" tools:ignore="MissingTranslation">Background Location Permission</string>
    <string name="msg_bt_perm" tools:ignore="MissingTranslation">Bluetooth permissions not granted, please enable them in settings.</string>
    <string name="msg_loc1_perm" tools:ignore="MissingTranslation">Location permission not granted, please enable it in settings.</string>
    <string name="msg_loc2_perm" tools:ignore="MissingTranslation">Background Location permission not granted, please enable it in settings.</string>

    <string name="main_description">The app will show a notification when your AirPods are connected</string>
    <string name="hide_message">You can hide this app if you want</string>
    <string name="settings" tools:ignore="MissingTranslation">Settings</string>

    <string name="miui_warning" tools:ignore="MissingTranslation">MIUI detected</string>
    <string name="miui_warning_desc" tools:ignore="MissingTranslation">The ROM running on this device has known compatibility issues. You can continue but OpenPods may not work properly.</string>
    <string name="miui_warning_continue" tools:ignore="MissingTranslation">Continue</string>

    <string name="noBtText">It looks like this device doesn\'t have Bluetooth LE</string>
    <string name="locationDisabledText">You need to turn on Location to allow OpenPods to read the status</string>

    <string name="supportedDevicesTitle"><u>Supported devices:</u></string>
    <string name="airpods1">&#8226; Apple AirPods 1st gen</string>
    <string name="airpods2">&#8226; Apple AirPods 2nd gen</string>
    <string name="airpodspro">&#8226; Apple AirPods Pro</string>
    <string name="airpodsmax">&#8226; Apple AirPods Max</string>
    <string name="beatsx">&#8226; Beats X</string>
    <string name="beatsflex">&#8226; Beats Flex</string>
    <string name="beatssolo3">&#8226; Beats Solo 3</string>
    <string name="beatsstudio3">&#8226; Beats Studio 3</string>
    <string name="powerbeats3">&#8226; Powerbeats 3</string>
    <string name="powerbeatspro">&#8226; Powerbeats Pro</string>

    <string name="batterySaver">Battery saver (Not recommended)</string>
    <string name="batterySaver_desc">Enable this if Bluetooth uses a lot of battery</string>
    <string name="restart" tools:ignore="MissingTranslation">Restart Service</string>
    <string name="restart_desc" tools:ignore="MissingTranslation">Do this if the notification is not showing</string>
    <string name="hide">Hide app</string>
    <string name="hide_desc">Hide this app from the launcher</string>
    <string name="hide_dialog" tools:ignore="MissingTranslation">Are you sure?</string>
    <string name="hide_dialog_desc" tools:ignore="MissingTranslation">Are you sure that you want to hide the App? This can only be undone by reinstalling it.</string>
    <string name="hide_dialog_button" tools:ignore="MissingTranslation">Hide</string>
    <string name="hideClicked">The icon will disappear soon</string>
    <string name="about">About</string>

    <string name="about_dev">Developed by Federico Dossena and Itai Levin</string>
    <string name="website">Website</string>
    <string name="github" tools:ignore="MissingTranslation">Github</string>
    <string name="donate">Donate</string>
    <string name="fdroid" translatable="false">F-Droid</string>
</resources>
